# pi-acp-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  rust-toolchain.toml
.github/workflows/: ci.yml  publish-npm-oidc.yml  release.yml
bench/: results-linux-x86_64.json  run.py
bench/node/: package-lock.json  package.json  real-pi-e2e.mjs
fixtures/: fake-pi.py
src/: acp.rs  adapter.rs  index.rs  lib.rs  main.rs  pi_rpc.rs  process.rs  translate.rs
tests/: e2e.rs
